# capsule

./: .gitignore  .golangci.yml  LICENSE  README.en.md  README.md  README.ru.md  go.mod  go.sum  meson.build
.forgejo/workflows/: build-altlinux.yml  build-main.yml  build-utils.yml
.gear/: rules
.gear/tags/: list
altlinux/: capsule.spec
build-aux/: get_meson_version
build-aux/altlinux/: capsule.spec.in  prepare  rules
cmd/capsule/: main.go  runner.go
cmd/capsule-runtime/: actions.go  bootstrap.go  main.go  runner.go  session.go
docs/: about.md
examples/: chrome.yaml  davinci.yaml  gaming.yaml  max.yaml  stplr.yaml  test.yaml  vscode.yaml  winehelper.yaml  yandex_music.yaml
internal/capsule/: assembler.go  compiler.go  config.go  generator.go
internal/config/: config.go  constants.go
internal/embed/: embed.go
internal/embed/files/: bash  init.c.tmpl  nvidia.sh.tmpl  runtime.sh.tmpl
internal/format/binconfig/: binconfig.go  binconfig_test.go
internal/format/selfread/: selfread.go  selfread_test.go
internal/i18n/: default.pot  translations.go
internal/oci/: extractor.go  puller.go
internal/rootfs/: builder.go
internal/runtime/bundle/: bundle.go
internal/runtime/bwrap/: bwrap.go  bwrap_test.go
internal/runtime/clean/: clean.go
internal/runtime/commit/: commit.go  commit_test.go
internal/runtime/export/: desktop.go  desktop_test.go  export.go  export_test.go  icon.go  icon_test.go  run.go
internal/runtime/fsutil/: fsutil.go
internal/runtime/hostexec/: client.go  client_test.go  server.go  (+3 more)
internal/squashfs/: compressor.go
po/: meson.build
scripts/: build-runtime.sh  create-utils.sh  get-version.sh  update-pot.sh
(+63 files in other folders)
